force-app/main/default/objects/Registration__c/Registration__c.object-meta.xml
<CustomObject>
    <label>Registration</label>
    <nameField>
        <displayFormat>REG-{0000}</displayFormat>
        <label>Registration ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <description>Business owner registration to claim a venue</description>
</CustomObject>